--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "cra-append-sw": "^2.6.1",
+    "prop-types": "^15.5.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-dropzone": "^10.1.10",
+    "react-dropzone-uploader": "^2.10.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "3.2.0",
-    "prop-types": "^15.5.7",
-    "react-router-dom": "^4.2.2"
+    "superagent": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
